Daksh made his changes on his Local Machine

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,10 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Daksh and ready to learn Modern Mobile Applicatiobn Development.
+	<h4>Learning this course is really a fun</h4>
+	Thank you for providing such a beautiful platform
         </div>
+	
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
