[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,28 @@
 <html>
+    <head>
+        <title>Article One|Daksh</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            This is Article one
+        </h3>
+        <div>
+           Today's date is February 19.2018
+        </div>
+        <div>
+            <p>
+            I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.
+            </p>
+            <p>
+            I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.
+            </p>
+            <p>
+            I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.
+            </p>
+        </div>
+    </body>
 </html>
