--- a/ui/article-2.html
+++ b/ui/article-2.html
@@ -1,2 +1,29 @@
 <html>
+    <head>
+        <title>Article Two | Daksh</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            This is Article two
+        </h3>
+        <div>
+           Today's date is February 19.2018
+        </div>
+        <div>
+            <p>
+            I am going to put my content of second article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.
+            </p>
+            <p>
+            I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.
+            </p>
+            <p>
+            I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.
+            </p>
+        </div>
+    </body>
 </html>
