[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -24,6 +25,7 @@
             <p>
             I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.I am going to put my content of first article over here.
             </p>
+        </div>
         </div>
     </body>
 </html>
